@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 2.999-999.018
-Date: 2022-07-09
+Version: 2.999-999.019
+Date: 2022-07-10
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre"),
