@@ -1,3 +1,3 @@
 date version nhelpfiles nobjects ndatasets Rlines srclines
 "2022-05-25" "3.0-0" 224 500 0 30319 6183
-"2022-07-09" "2.999-999.018" 225 505 0 30482 6183
+"2022-07-10" "2.999-999.019" 225 505 0 30492 6183
